--- a/stylesheet.css
+++ b/stylesheet.css
@@ -710,3 +710,22 @@ html, body {
   }
 }
 
+/* Disable all drop caps on the site except inside .paper .main */
+p::first-letter {
+    float: none;
+    font-size: inherit;
+    padding: 0;
+    line-height: inherit;
+}
+
+/* Restore the intended drop cap ONLY for newspaper */
+.paper .main p:first-of-type:first-letter {
+    float: left;
+    font-size: 72px;
+    padding-right: 10px;
+    padding-top: 6px;
+    color: var(--accent);
+    font-weight: 700;
+    line-height: 0.8;
+}
+
