--- a/stylesheet.css
+++ b/stylesheet.css
@@ -768,6 +768,18 @@ html, body {
     font-weight: inherit !important;
 }
 
+@media (max-width: 600px) {
+  .mast h1 {
+    font-size: 40px !important;
+    line-height: 1.05;
+  }
+
+  .paper {
+    margin-top: 20px !important;
+  }
+}
+
+
 
 
 
